--- a/setup/roles/cri-o/defaults/main.yaml
+++ b/setup/roles/cri-o/defaults/main.yaml
@@ -2,7 +2,7 @@
 crio_version: "1.20"
 crio_os: xUbuntu_20.04
 crio_repo: https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable
-crio_skopeo: false
-crio_cni: false
+crio_skopeo: true
+crio_cni: true
 cni_plugin_version: v0.9.1
 cni_plugin_url: https://github.com/containernetworking/plugins/releases/download/{{ cni_plugin_version }}/cni-plugins-linux-amd64-{{ cni_plugin_version }}.tgz
